# datasette-libfec

./: .gitignore  AGENTS.md  Justfile  pyproject.toml
.claude/rules/: backend-patterns.md  formatting.md  frontend-code-style.md  new-pages.md  page-data-pattern.md  sql-patterns.md  svelte-data-fetching.md  type-checking.md
.github/workflows/: publish.yml  test.yml
datasette_libfec/: __init__.py  alert_types.py  database.py  internal_db.py  internal_migrations.py  libfec_client.py  libfec_export_rpc_client.py  libfec_rpc_client.py  libfec_search_rpc_client.py  page_data.py  router.py  routes.py  routes_alerts.py  routes_export.py  routes_exports.py  routes_pages.py  routes_rss.py  routes_search.py  rss_handler.py  rss_watcher.py  state.py  user_migrations.py
datasette_libfec/static/: import.min.js
datasette_libfec/templates/: filing_detail.html  libfec.html  libfec_base.html
frontend/: .prettierrc  README.md  api.d.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: AlertDetail.svelte  Alerts.svelte  Candidate.svelte  Committee.svelte  Contest.svelte  Export.svelte  FilingDetail.svelte  Import.svelte  LibfecIndex.svelte  RecentFilings.svelte  Rss.svelte  alert_detail_view.ts  alerts_view.ts  api.ts  candidate_view.ts  committee_view.ts  contest_view.ts  export_view.ts  filing_day_view.ts  filing_detail_view.ts  import_view.ts  index_view.ts  rss_view.ts  stores.ts  useQuery.svelte.ts
frontend/src/alerts/: CommitteeSearch.svelte  ContestForm.svelte  ContributorForm.svelte
frontend/src/components/: Breadcrumb.svelte  CommitteeSankey.svelte  FilingNav.svelte  OverflowMenu.svelte  Popover.svelte  RecentFilings.svelte  SearchMultiSelect.svelte  SummaryCards.svelte
frontend/src/filing-day/: ColumnSelector.svelte  FilingDay.svelte  columns.ts
frontend/src/forms/: F1.svelte  F1S.svelte  F2.svelte  F24.svelte  F3.svelte  F3P.svelte  F3S.svelte  F3X.svelte  F6.svelte  F99.svelte
frontend/src/index/: ExportHistory.svelte  ImportForm.svelte  RssSyncHistory.svelte  RssWatcher.svelte
frontend/src/page_data/: AlertsPageData.types.ts  AlertsPageData_schema.json  CandidatePageData.types.ts  CandidatePageData_schema.json  CommitteePageData.types.ts  CommitteePageData_schema.json  ContestPageData.types.ts  ContestPageData_schema.json  ExportPageData.types.ts  RssPageData.types.ts  (+11 more)
frontend/targets/: import.tsx
scripts/: typegen-pagedata.py
tests/: test_alerts.py  test_export_commands.py  test_libfec.py
(+22 files in other folders)
