[project]
name = "datasette-libfec"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1a23",
    "datasette-plugin-router @ https://github.com/datasette/datasette-plugin-router/archive/refs/heads/main.zip",
    "libfec>=0.0.17",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-libfec"
Changelog = "https://github.com/datasette/datasette-libfec/releases"
Issues = "https://github.com/datasette/datasette-libfec/issues"
CI = "https://github.com/datasette/datasette-libfec/actions"

[project.entry-points.datasette]
libfec = "datasette_libfec"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_libfec = ["static/**/*", "templates/*", "manifest.json", "schema.sql"]

[tool.setuptools.packages.find]
exclude = [
    "frontend",
]
